tests/ui/scalable-vectors/illformed.stderr
error: scalable vectors must be tuple structs
  --> $DIR/illformed.rs:7:1
   |
LL | struct NoFieldsStructWithElementCount {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: scalable vectors must be tuple structs
  --> $DIR/illformed.rs:16:1
   |
LL | struct NoFieldsUnitWithElementCount;
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: scalable vectors must be tuple structs
  --> $DIR/illformed.rs:21:1
   |
LL | struct NoFieldsStructWithoutElementCount {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: scalable vectors must be tuple structs
  --> $DIR/illformed.rs:30:1
   |
LL | struct NoFieldsUnitWithoutElementCount;
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: scalable vectors must be tuple structs
  --> $DIR/illformed.rs:35:1
   |
LL | / struct MultipleFieldsStructWithElementCount {
LL | |
LL | |
LL | |     _ty: f32,
LL | |     other: u32,
LL | | }
   | |_^

error: scalable vectors must be tuple structs
  --> $DIR/illformed.rs:47:1
   |
LL | / struct MultipleFieldsStructWithoutElementCount {
LL | |
LL | |     _ty: f32,
...  |
LL | | }
   | |_^

error: scalable vectors must be tuple structs
  --> $DIR/illformed.rs:59:1
   |
LL | struct SingleFieldStruct { _ty: f64 }
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: scalable vectors must have a single field
  --> $DIR/illformed.rs:7:1
   |
LL | struct NoFieldsStructWithElementCount {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: scalable vector types' only field must be a primitive scalar type

error: scalable vectors must have a single field
  --> $DIR/illformed.rs:12:1
   |
LL | struct NoFieldsTupleWithElementCount();
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: scalable vector types' only field must be a primitive scalar type

error: scalable vectors must have a single field
  --> $DIR/illformed.rs:16:1
   |
LL | struct NoFieldsUnitWithElementCount;
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: scalable vector types' only field must be a primitive scalar type

error: scalable vectors must have a single field
  --> $DIR/illformed.rs:21:1
   |
LL | struct NoFieldsStructWithoutElementCount {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: tuples of scalable vectors can only contain multiple of the same scalable vector type

error: scalable vectors must have a single field
  --> $DIR/illformed.rs:26:1
   |
LL | struct NoFieldsTupleWithoutElementCount();
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: tuples of scalable vectors can only contain multiple of the same scalable vector type

error: scalable vectors must have a single field
  --> $DIR/illformed.rs:30:1
   |
LL | struct NoFieldsUnitWithoutElementCount;
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: tuples of scalable vectors can only contain multiple of the same scalable vector type

error: scalable vectors cannot have multiple fields
  --> $DIR/illformed.rs:35:1
   |
LL | struct MultipleFieldsStructWithElementCount {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: scalable vectors cannot have multiple fields
  --> $DIR/illformed.rs:43:1
   |
LL | struct MultipleFieldsTupleWithElementCount(f32, u32);
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: scalable vector structs can only have scalable vector fields
  --> $DIR/illformed.rs:49:5
   |
LL |     _ty: f32,
   |     ^^^^^^^^

error: scalable vector structs can only have scalable vector fields
  --> $DIR/illformed.rs:55:47
   |
LL | struct MultipleFieldsTupleWithoutElementCount(f32, u32);
   |                                               ^^^

error: aborting due to 17 previous errors

